# product_research_agent

./: LICENSE  README.md  pyproject.toml
src/product_recommendation_engine/: crew.py  main.py
src/product_recommendation_engine/config/: agents.yaml  tasks.yaml
