[project]
name = "product_recommendation_engine"
version = "0.1.0"
description = "product_recommendation_engine using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.11.0",
    "serpapi",
]

[project.scripts]
product_recommendation_engine = "product_recommendation_engine.main:run"
run_crew = "product_recommendation_engine.main:run"
train = "product_recommendation_engine.main:train"
replay = "product_recommendation_engine.main:replay"
test = "product_recommendation_engine.main:test"
run_with_trigger = "product_recommendation_engine.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
